Fixed mobile footer overlap...

--- a/src/pages/Footer/Footer.css
+++ b/src/pages/Footer/Footer.css
@@ -32,6 +32,7 @@
     color: var(--textColor);
     border-top: 2px solid #000000;
     background-color: var(--backgroundColor);
+    z-index: 7;
 }
 
 @media only screen and (max-width: 1024px){
